Routing, Route Guard, Service (Auth Service), Refactor, Revision - TS, JS, Conventions

--- a/src/app/apps/signin/signin.component.html
+++ b/src/app/apps/signin/signin.component.html
@@ -48,7 +48,8 @@
         <!--Action-->
         <mat-card-actions>
           <button mat-flat-button>SIGN-IN</button>
-          <button mat-flat-button (click)="goToHome()">Home</button>
+          <button mat-flat-button (click)="goToPrivateApp()">Private App</button>
+          <button mat-flat-button (click)="goToPublicApp()">Public App</button>
         </mat-card-actions>
       </mat-card>
     </div>
