--- a/src/app/components/table-first-last/table-first-last.component.html
+++ b/src/app/components/table-first-last/table-first-last.component.html
@@ -1,6 +1,6 @@
 <div class="app-window">
   <div class="body">
-    <button mat-flat-button (click)="setFirstPage(true)">First Page</button>
-    <button mat-flat-button (click)="setLastPage(true)">Last Page</button>
+    <button mat-flat-button (click)="setFirstPage(true)" matTooltip="First Page">First Page</button>
+    <button mat-flat-button (click)="setLastPage(true)" matTooltip="Last Page">Last Page</button>
   </div>
 </div>
