--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ html {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  overscroll-behavior: contain;
 }
 
 body {
@@ -16,6 +17,7 @@ body {
   overflow: hidden;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   margin: 0;
+  user-select: none;
 }
 
 app-root {
@@ -34,4 +36,8 @@ app-root {
       overflow: hidden;
     }
   }
+}
+
+*{
+  box-sizing: border-box;
 }
