--- a/src/app/apps/public/components/user-list/user-list.component.html
+++ b/src/app/apps/public/components/user-list/user-list.component.html
@@ -1,6 +1,10 @@
 <div class="app-window">
   <div class="header">
     <div class="title">User Lists (Page No: {{ activePage }})</div>
+
+    <button mat-stroked-button (click)="openDrawer()">Open Drawer</button>
+    <button mat-stroked-button (click)="openPortal()">Set Portal</button>
+
     <div class="page-status">
       <p class="page-list">FirstPage: {{ firstPage ? 'Yes' : 'No' }}</p>
       <p
@@ -15,29 +19,31 @@
     </div>
   </div>
   <div class="body">
+    <!--Filter Input-->
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input
+        type="text"
+        matInput
+        placeholder="Filter"
+        [formControl]="filterFormControl"
+      />
+    </mat-form-field>
     <div class="content-container">
-      <!--Filter Input-->
-      <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input
-          type="text"
-          matInput
-          placeholder="Filter"
-          [formControl]="filterFormControl"
-        />
-      </mat-form-field>
-      <table mat-table [dataSource]="dataSource" matSort>
+      <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
         <!-- Columns-->
         <!--No-->
         <ng-container matColumnDef="no" sticky="true">
           <th mat-header-cell *matHeaderCellDef>No</th>
-          <td mat-cell *matCellDef="let data; let i = index">{{ i + 1 }}</td>
+          <td mat-cell *matCellDef="let data; let i = dataIndex" rowspan="2">
+            {{ i + 1 }}
+          </td>
         </ng-container>
 
         <!--Name-->
         <ng-container matColumnDef="name" sticky="true">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-          <td mat-cell *matCellDef="let data; let i = index">
+          <td mat-cell *matCellDef="let data" rowspan="2">
             {{ data.name }}
           </td>
         </ng-container>
@@ -45,39 +51,49 @@
         <!--Age-->
         <ng-container matColumnDef="age">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
-          <td mat-cell *matCellDef="let data; let i = index">{{ data.age }}</td>
+          <td mat-cell *matCellDef="let data" rowspan="2">{{ data.age }}</td>
         </ng-container>
 
         <!--Gender-->
         <ng-container matColumnDef="gender">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
-          <td mat-cell *matCellDef="let data; let i = index">
+          <td mat-cell *matCellDef="let data" rowspan="2">
             {{ data.gender }}
           </td>
         </ng-container>
 
         <!--Race-->
         <ng-container matColumnDef="race">
-          <th mat-header-cell *matHeaderCellDef>Race</th>
-          <td mat-cell *matCellDef="let data; let i = index">-</td>
+          <th mat-header-cell *matHeaderCellDef>Race/Religion</th>
+          <td mat-cell *matCellDef="let data">Race</td>
         </ng-container>
 
-        <!--Religion-->
+        <!-- Religion -->
         <ng-container matColumnDef="religion">
           <th mat-header-cell *matHeaderCellDef>Religion</th>
-          <td mat-cell *matCellDef="let data; let i = index">-</td>
+          <td mat-cell *matCellDef="let data">Religion</td>
         </ng-container>
 
         <!--Occupation-->
         <ng-container matColumnDef="occupation">
-          <th mat-header-cell *matHeaderCellDef>Occupation</th>
-          <td mat-cell *matCellDef="let data; let i = index">-</td>
+          <th mat-header-cell *matHeaderCellDef>Occupation/Address</th>
+          <td mat-cell *matCellDef="let data; let i = index">
+            This is Occupation
+          </td>
+        </ng-container>
+
+        <!--Address-->
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef>Address</th>
+          <td mat-cell *matCellDef="let data; let i = index">
+            This is Address
+          </td>
         </ng-container>
 
         <!--Menu-->
         <ng-container matColumnDef="menu" stickyEnd="true">
           <th mat-header-cell *matHeaderCellDef>Menu</th>
-          <td mat-cell *matCellDef="let data; let i = index">
+          <td mat-cell *matCellDef="let data; let i = index" rowspan="2">
             <button mat-icon-button>
               <mat-icon>menu</mat-icon>
             </button>
@@ -85,11 +101,16 @@
         </ng-container>
 
         <!--Rows-->
+
+        <!-- Header Rows -->
         <tr
           mat-header-row
           *matHeaderRowDef="displayedColumns; sticky: true"
         ></tr>
+
+        <!-- Data Rows -->
         <tr mat-row *matRowDef="let data; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let data; columns: displayedColumns2"></tr>
       </table>
     </div>
     <div class="table-footer">
