--- a/src/app/apps/public/components/user-list/user-list.component.html
+++ b/src/app/apps/public/components/user-list/user-list.component.html
@@ -1,135 +1,153 @@
-<div class="app-window">
-  <div class="header">
-    <div class="title">User Lists (Page No: {{ activePage }})</div>
+<mat-tab-group selectedIndex="1">
+  <mat-tab label="USER LIST">
+    <div class="app-window">
+      <div class="header">
+        <div class="title">User Lists (Page No: {{ activePage }})</div>
 
-    <button mat-stroked-button (click)="openDrawer()">Open Drawer</button>
-    <button mat-stroked-button (click)="openPortal()">Set Portal</button>
+        <button mat-stroked-button (click)="openDrawer()">Open Drawer</button>
+        <button mat-stroked-button (click)="openPortal()">Set Portal</button>
 
-    <div class="page-status">
-      <p class="page-list">FirstPage: {{ firstPage ? 'Yes' : 'No' }}</p>
-      <p
-        class="page-list"
-        matTooltip="LastPage"
-        matTooltipPosition="right"
-        matTooltipShowDelay="1000"
-        matTooltipHideDelay="3000"
-      >
-        LastPage: {{ lastPage ? 'Yes' : 'No' }}
-      </p>
+        <div class="page-status">
+          <p class="page-list">FirstPage: {{ firstPage ? 'Yes' : 'No' }}</p>
+          <p
+            class="page-list"
+            matTooltip="LastPage"
+            matTooltipPosition="right"
+            matTooltipShowDelay="1000"
+            matTooltipHideDelay="3000"
+          >
+            LastPage: {{ lastPage ? 'Yes' : 'No' }}
+          </p>
+        </div>
+      </div>
+      <div class="body">
+        <!--Filter Input-->
+        <mat-form-field>
+          <mat-label>Filter</mat-label>
+          <input
+            type="text"
+            matInput
+            placeholder="Filter"
+            [formControl]="filterFormControl"
+          />
+        </mat-form-field>
+        <div class="content-container">
+          <table
+            mat-table
+            [dataSource]="dataSource"
+            matSort
+            multiTemplateDataRows
+          >
+            <!-- Columns-->
+            <!--No-->
+            <ng-container matColumnDef="no" sticky="true">
+              <th mat-header-cell *matHeaderCellDef>No</th>
+              <td
+                mat-cell
+                *matCellDef="let data; let i = dataIndex"
+                rowspan="2"
+              >
+                {{ i + 1 }}
+              </td>
+            </ng-container>
+
+            <!--Name-->
+            <ng-container matColumnDef="name" sticky="true">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+              <td mat-cell *matCellDef="let data" rowspan="2">
+                {{ data.name }}
+              </td>
+            </ng-container>
+
+            <!--Age-->
+            <ng-container matColumnDef="age">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
+              <td mat-cell *matCellDef="let data" rowspan="2">
+                {{ data.age }}
+              </td>
+            </ng-container>
+
+            <!--Gender-->
+            <ng-container matColumnDef="gender">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
+              <td mat-cell *matCellDef="let data" rowspan="2">
+                {{ data.gender }}
+              </td>
+            </ng-container>
+
+            <!--Race-->
+            <ng-container matColumnDef="race">
+              <th mat-header-cell *matHeaderCellDef>Race/Religion</th>
+              <td mat-cell *matCellDef="let data">Race</td>
+            </ng-container>
+
+            <!-- Religion -->
+            <ng-container matColumnDef="religion">
+              <th mat-header-cell *matHeaderCellDef>Religion</th>
+              <td mat-cell *matCellDef="let data">Religion</td>
+            </ng-container>
+
+            <!--Occupation-->
+            <ng-container matColumnDef="occupation">
+              <th mat-header-cell *matHeaderCellDef>Occupation/Address</th>
+              <td mat-cell *matCellDef="let data; let i = index">
+                This is Occupation
+              </td>
+            </ng-container>
+
+            <!--Address-->
+            <ng-container matColumnDef="address">
+              <th mat-header-cell *matHeaderCellDef>Address</th>
+              <td mat-cell *matCellDef="let data; let i = index">
+                This is Address
+              </td>
+            </ng-container>
+
+            <!--Menu-->
+            <ng-container matColumnDef="menu" stickyEnd="true">
+              <th mat-header-cell *matHeaderCellDef>Menu</th>
+              <td mat-cell *matCellDef="let data; let i = index" rowspan="2">
+                <button mat-icon-button>
+                  <mat-icon>menu</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <!--Rows-->
+
+            <!-- Header Rows -->
+            <tr
+              mat-header-row
+              *matHeaderRowDef="displayedColumns; sticky: true"
+            ></tr>
+
+            <!-- Data Rows -->
+            <tr mat-row *matRowDef="let data; columns: displayedColumns"></tr>
+            <tr mat-row *matRowDef="let data; columns: displayedColumns2"></tr>
+          </table>
+        </div>
+        <div class="table-footer">
+          <mat-paginator
+            [pageSizeOptions]="[20, 50, 100]"
+            #tablePaginator
+          ></mat-paginator>
+
+          <div class="spacer"></div>
+          <app-table-pages
+            [activePage]="activePage"
+            [pageList]="parentPageList"
+            (onPageChanged)="pageChanged($event)"
+          ></app-table-pages>
+
+          <app-table-first-last
+            (onFirstPage)="firstPageChanged($event)"
+            (onLastPage)="lastPageChanged($event)"
+          ></app-table-first-last>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="body">
-    <!--Filter Input-->
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input
-        type="text"
-        matInput
-        placeholder="Filter"
-        [formControl]="filterFormControl"
-      />
-    </mat-form-field>
-    <div class="content-container">
-      <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
-        <!-- Columns-->
-        <!--No-->
-        <ng-container matColumnDef="no" sticky="true">
-          <th mat-header-cell *matHeaderCellDef>No</th>
-          <td mat-cell *matCellDef="let data; let i = dataIndex" rowspan="2">
-            {{ i + 1 }}
-          </td>
-        </ng-container>
-
-        <!--Name-->
-        <ng-container matColumnDef="name" sticky="true">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-          <td mat-cell *matCellDef="let data" rowspan="2">
-            {{ data.name }}
-          </td>
-        </ng-container>
-
-        <!--Age-->
-        <ng-container matColumnDef="age">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
-          <td mat-cell *matCellDef="let data" rowspan="2">{{ data.age }}</td>
-        </ng-container>
-
-        <!--Gender-->
-        <ng-container matColumnDef="gender">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
-          <td mat-cell *matCellDef="let data" rowspan="2">
-            {{ data.gender }}
-          </td>
-        </ng-container>
-
-        <!--Race-->
-        <ng-container matColumnDef="race">
-          <th mat-header-cell *matHeaderCellDef>Race/Religion</th>
-          <td mat-cell *matCellDef="let data">Race</td>
-        </ng-container>
-
-        <!-- Religion -->
-        <ng-container matColumnDef="religion">
-          <th mat-header-cell *matHeaderCellDef>Religion</th>
-          <td mat-cell *matCellDef="let data">Religion</td>
-        </ng-container>
-
-        <!--Occupation-->
-        <ng-container matColumnDef="occupation">
-          <th mat-header-cell *matHeaderCellDef>Occupation/Address</th>
-          <td mat-cell *matCellDef="let data; let i = index">
-            This is Occupation
-          </td>
-        </ng-container>
-
-        <!--Address-->
-        <ng-container matColumnDef="address">
-          <th mat-header-cell *matHeaderCellDef>Address</th>
-          <td mat-cell *matCellDef="let data; let i = index">
-            This is Address
-          </td>
-        </ng-container>
-
-        <!--Menu-->
-        <ng-container matColumnDef="menu" stickyEnd="true">
-          <th mat-header-cell *matHeaderCellDef>Menu</th>
-          <td mat-cell *matCellDef="let data; let i = index" rowspan="2">
-            <button mat-icon-button>
-              <mat-icon>menu</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <!--Rows-->
-
-        <!-- Header Rows -->
-        <tr
-          mat-header-row
-          *matHeaderRowDef="displayedColumns; sticky: true"
-        ></tr>
-
-        <!-- Data Rows -->
-        <tr mat-row *matRowDef="let data; columns: displayedColumns"></tr>
-        <tr mat-row *matRowDef="let data; columns: displayedColumns2"></tr>
-      </table>
-    </div>
-    <div class="table-footer">
-      <mat-paginator
-        [pageSizeOptions]="[20, 50, 100]"
-        #tablePaginator
-      ></mat-paginator>
-
-      <div class="spacer"></div>
-      <app-table-pages
-        [activePage]="activePage"
-        [pageList]="parentPageList"
-        (onPageChanged)="pageChanged($event)"
-      ></app-table-pages>
-
-      <app-table-first-last
-        (onFirstPage)="firstPageChanged($event)"
-        (onLastPage)="lastPageChanged($event)"
-      ></app-table-first-last>
-    </div>
-  </div>
-</div>
+  </mat-tab>
+  <mat-tab label="CHART">
+    <app-chart-component></app-chart-component>
+  </mat-tab>
+</mat-tab-group>
