--- a/src/app/apps/public/components/user-list/user-list.component.scss
+++ b/src/app/apps/public/components/user-list/user-list.component.scss
@@ -3,6 +3,28 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+
+  mat-tab-group{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+
+    ::ng-deep .mat-mdc-tab-body-wrapper{
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+
+      .mat-mdc-tab-body,
+      .mat-mdc-tab-body-content{
+        flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      }
+    }
+  }
   .app-window {
     flex: 1;
     display: flex;
