SCSS Mixin, Theming, Component Variants, Revision - Tabs, Chips

--- a/src/app/apps/public/components/components/chart-component/chart-component.component.html
+++ b/src/app/apps/public/components/components/chart-component/chart-component.component.html
@@ -2,7 +2,17 @@
   <div class="header">
     <div class="title">Chips</div>
 
-    <button mat-flat-button (click)="changeToDarkMode()">Dark Mode</button>
+    <button mat-flat-button (click)="toggleMode()">Dark Mode</button>
+    <button mat-flat-button (click)="changeTheme(themeNamesEnum.YELLOW)">Yellow Theme</button>
+    <button mat-flat-button (click)="changeTheme(themeNamesEnum.GREEN)">Green Theme</button>
+    <button mat-flat-button (click)="changeTheme(themeNamesEnum.CUSTOM)">Custom Theme</button>
+
+
+    <button mat-flat-button class="primary-button">Primary</button>
+    <button mat-flat-button class="secondary-button">Secondary</button>
+    <button mat-flat-button class="tertiary-button">Tertiary</button>
+    <button mat-flat-button class="error-button">Error</button>
+
   </div>
   <div class="body">
     <p>Chip Set</p>
