--- a/src/app/apps/public/components/user-list/user-list.component.html
+++ b/src/app/apps/public/components/user-list/user-list.component.html
@@ -150,4 +150,8 @@
   <mat-tab label="CHART">
     <app-chart-component></app-chart-component>
   </mat-tab>
+
+  <mat-tab label="Drag and Drop">
+    <app-drag-drop-cdk-component></app-drag-drop-cdk-component>
+  </mat-tab>
 </mat-tab-group>
